--- a/SignUpPage3.html
+++ b/SignUpPage3.html
@@ -31,7 +31,7 @@
                         <p><img src="Tick.jpeg" class="img-Tick"> No ads and no fees for Ever.</p>
                     </div>
                     
-                    <button type="button" id="btnNext" onclick="NavBtn1()">Next</button>
+                    <button type="button" id="btnNext">Next</button>
                 </div>
             </div>
         </form>
