--- a/landingPage.html
+++ b/landingPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Universe</title>
+    <title>Netflix Landing Page</title>
     <link rel="icon" href="netflix_logo_icon.png">
     <link rel="stylesheet" href="landingPage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
